--- a/Myntra clone/index.html
+++ b/Myntra clone/index.html
@@ -31,10 +31,37 @@
             </div>
     </header>
         <main>
-            <div class="banner-container">Banner</div>
-            <div class="category-heading">Category</div>
-            <div class="category-items">items</div>
-        </main>
+            <div class="banner-container">
+                <img src="./images/banner.jpg" alt="">
+            </div>
+            <div class="category-heading">Medal worthy brands to bag</div>
+            <div class="category-items">
+                <a href="#" class="sale-items"><img src="./images/1.png" alt=""></a>
+                <a href="#" class="sale-items"><img src="./images/2.png" alt=""></a>
+                <a href="#" class="sale-items"><img src="./images/3.png" alt=""></a>
+                <a href="#" class="sale-items"><img src="./images/4.png" alt=""></a>
+                <a href="#" class="sale-items"><img src="./images/5.png" alt=""></a>
+                <a href="#" class="sale-items"><img src="./images/6.png" alt=""></a>
+                <a href="#" class="sale-items"><img src="./images/7.png" alt=""></a>
+                <a href="#" class="sale-items"><img src="./images/8.png" alt=""></a>
+                <a href="#" class="sale-items"><img src="./images/9.png" alt=""></a>
+                <a href="#" class="sale-items"><img src="./images/10.png" alt=""></a>
+                <a href="#" class="sale-items"><img src="./images/11.png" alt=""></a>
+                <a href="#" class="sale-items"><img src="./images/12.png" alt=""></a>
+            </div>
+             <div class="category-heading">Shop by category</div>
+            <div class="category-items">
+                <a href="#" class="sale-items"><img src="./images/1.jpg" alt=""></a>
+                <a href="#" class="sale-items"><img src="./images/2.jpg" alt=""></a>
+                <a href="#" class="sale-items"><img src="./images/3.jpg" alt=""></a>
+                <a href="#" class="sale-items"><img src="./images/4.jpg" alt=""></a>
+                <a href="#" class="sale-items"><img src="./images/5.jpg" alt=""></a>
+                <a href="#" class="sale-items"><img src="./images/6.jpg" alt=""></a>
+                <a href="#" class="sale-items"><img src="./images/7.jpg" alt=""></a>
+                <a href="#" class="sale-items"><img src="./images/8.jpg" alt=""></a>
+                <a href="#" class="sale-items"><img src="./images/9.jpg" alt=""></a>
+                <a href="#" class="sale-items"><img src="./images/10.jpg" alt=""></a>
+            </div>
         <footer></footer>
   
 </body>
