Myntra Clone Done

--- a/Myntra clone/index.html
+++ b/Myntra clone/index.html
@@ -62,7 +62,42 @@
                 <a href="#" class="sale-items"><img src="./images/9.jpg" alt=""></a>
                 <a href="#" class="sale-items"><img src="./images/10.jpg" alt=""></a>
             </div>
-        <footer></footer>
+        <footer>
+            <div class="footer-container">
+                <div class="footer-column">
+                    <h3>ONLINE SHOPPING</h3>
+                    <a href="#" class="navopt">Men</a>
+                    <a href="#" class="navopt">Women</a>
+                    <a href="#" class="navopt">KIDS</a>
+                    <a href="#" class="navopt">HOME & LIVING</a>
+                    <a href="#" class="navopt">BEAUTY</a>
+                    <a href="#" class="navopt">Gift card</a>
+                    <a href="#" class="navopt">Myntra insider</a>
+                </div>
+                <div class="footer-column">
+                    <h3>customer policies</h3>
+                    <a href="#" class="navopt">contact us</a>
+                    <a href="#" class="navopt">faq</a>
+                    <a href="#" class="navopt">t&c</a>
+                    <a href="#" class="navopt">terms of use</a>
+                    <a href="#" class="navopt">track orders</a>
+                    <a href="#" class="navopt">shopping</a>
+                    <a href="#" class="navopt">privacy policies</a>
+                </div>
+                <div class="footer-column">
+                    <h3>useful links</h3>
+                    <a href="#" class="navopt">Blogs</a>
+                    <a href="#" class="navopt">careers</a>
+                    <a href="#" class="navopt">site map</a>
+                    <a href="#" class="navopt">corporate information</a>
+                    <a href="#" class="navopt">whitehat</a>
+                </div>
+            </div>
+            <hr>
+            <div class="copyright">
+                &copy; 2025 www.myntra.com <br>Made with <i class="fa-solid fa-heart"></i> by VAIBHAV ARORA
+            </div>
+        </footer>
   
 </body>
 </html>
